--- a/index.html
+++ b/index.html
@@ -25,71 +25,62 @@
     </header>
     <main class="col-12 col-lg-9 d-flex flex-column">
       <div class="m-5 row justify-content-around">
-        <!--todo start-->
-        <div class="col-12 col-md-6 col-xl-3 mb-3">
-          <div class="card">
-            <h4 class="card-header bg-dark text-light">
-              To Do
-         </h4>
-        <ul id="list-toDo" class="list-group list-group-flush"> 
-        <li class="list-group-item">
-          <span class="badge badge-primary badge-pill">05/28/2020</span>
-          <p class="m-1">Sample task to do</p>
-        </li>
-      </ul>
-      </div>
-    </div>
-      <!--todo end-->
-      <!--in progress start-->
-      <div class="col-12 col-md-6 col-xl-3 mb-3">
-        <div class="card">
-          <h4 class="card-header bg-dark text-light">
-        In Progress </h4>
-        <ul id="list-inProgress" class="list-group list-group-flush">
-          <li class="list-group-item">
-            <span class="badge badge-primary badge-pill">05/28/2020</span>
-            <p class="m-1">Sample task in progress</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-      <!-- in progress end -->
-      <!-- in review start -->
-      <div class="col-12 col-md-6 col-xl-3 mb-3">
-        <div class="card">
-          <h4 class="card-header bg-dark text-light">
-        In Review </h4>
-        <ul id="list-inReview" class="list-group list-group-flush">
-          <li class="list-group-item">
-            <span class="badge badge-primary badge-pill">05/28/2020</span>
-            <p class="m-1">Sample task in review</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-      <!-- in review end -->
-      <!-- done start -->
-      <div class="col-12 col-md-6 col-xl-3 mb-3">
-        <div class="card">
-          <h4 class="card-header bg-dark text-light">
-         Done </h4>
-        <ul id="list-done" class="list-group list-group-flush">
-          <li class="list-group-item">
-            <span class="badge badge-primary badge-pill">05/28/2020</span>
-            <p class="m-1">Sample task that's done</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-      <!-- done end -->
-      <div id="trash">
-        <div class="w-100 bg-danger p-3 text-center text-light display-4 mt-auto">
-          Drop Here To Remove.
+          <!--todo start-->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header bg-dark text-light">
+                To Do
+              </h4>
+              <ul id="list-toDo" class="list-group list-group-flush">
+                <p class="m-1">Sample task to do</p>
+              </ul>
+            </div>
           </div>
+          <!--todo end-->
+          <!--in progress start-->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header bg-dark text-light">
+                In Progress
+              </h4>
+              <ul id="list-inProgress" class="list-group list-group-flush">
+                <p class="m-1">Sample task in progress</p>
+              </ul>
+            </div>
+          </div>
+          <!--in progress end-->
+          <!--in review start-->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header bg-dark text-light">
+                In Review
+              </h4>
+              <ul id="list-inReview" class="list-group list-group-flush">
+                <p class="m-1">Sample task in review</p>
+              </ul>
+            </div>
+          </div>
+          <!--in review end-->
+          <!--done start-->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header bg-dark text-light">
+                Done
+              </h4>
+              <ul id="list-done" class="list-group list-group-flush">
+                <p class="m-1">Sample task that's done</p>
+              </ul>
+            </div>
+          </div>
+      </div>
+      <!--done end-->
+      <div class="mt-auto" id="trash">
+        <div class="w-100 bg-danger p-3 text-center text-light display-4">
+          Drop Here to Remove.
+        </div>
       </div>
     </main>
   </div>
-
   <!-- Modal -->
   <div class="modal fade" id="task-form-modal" tabindex="-1" role="dialog" aria-labelledby="task-form-modal"
     aria-hidden="true">
